tests/examples/good/misc/good100.lat
int main() {
    int i = 1;
    i = 0;

    return i;
}
