tests/examples/bad/var_redeclaration3.lat
int main() {
    int a, a;
    return 1;
}
